Bug 1917874 - part1 : apply the conformance cropping window on the decoded image. r=media-playback-reviewers,padenot

Differential Revision: https://phabricator.services.mozilla.com/D242616